infra/thmanyah/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: auth-ns
  labels:
    app: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: ghcr.io/faresmirza/auth-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /livez
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 15
      imagePullSecrets:
        - name: ghcr-regcred
      restartPolicy: Always
