infra/thmanyah/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth-ns
spec:
  selector:
    app: auth
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  type: ClusterIP
