infra/thmanyah/auth/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-network-policy
  namespace: auth-ns
spec:
  podSelector:
    matchLabels:
      app: auth
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: api-ns
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-ns
      ports:
        - protocol: TCP
          port: 4000

  egress:
    # Allow DNS resolution
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
    # Allow traffic to database
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: db-ns
      ports:
        - protocol: TCP
          port: 5432
